--- a/EcoMinds/ecominds01/pubspec.yaml
+++ b/EcoMinds/ecominds01/pubspec.yaml
@@ -63,7 +63,7 @@ flutter:
     - images/2.png
     - images/3.png
     - images/4.png
-    - images/senai.png
+    - images/image 8.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
